--- a/portfolio.HTML
+++ b/portfolio.HTML
@@ -7,6 +7,6 @@
         <h1>Riley Durrer</h1>
         <h2>Projects</h2>
         <h2>Additional Information</h2>
-        <a>https://docs.google.com/document/d/1wFaXArg6qEppGHh9HWLrK1uc1V_DMJZNoWEPFjaPp5g/edit?usp=sharing</a>
+        <a href="https://docs.google.com/document/d/1wFaXArg6qEppGHh9HWLrK1uc1V_DMJZNoWEPFjaPp5g/edit?usp=sharing" target="_blank">Resume</a>
     </body>
 </html>
