--- a/index.HTML
+++ b/index.HTML
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Riley Durrer</h1>
+        <p>email: Riley@Durrer.net </p>
         <h2>Projects</h2>
         <h2>Additional Information</h2>
         <a href="https://docs.google.com/document/d/1wFaXArg6qEppGHh9HWLrK1uc1V_DMJZNoWEPFjaPp5g/edit?usp=sharing" target="_blank">Resume</a>
